# xps-data-analysis

./: .gitignore  README.md  environment.yml  pyproject.toml  verify_installation.py
data/: README.md
src/: __init__.py
src/xps_analyzer/: __init__.py
src/xps_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/xps_analyzer/analysis/: __init__.py
src/xps_analyzer/cli/: main.py
src/xps_analyzer/data_loader/: __init__.py  core.py
src/xps_analyzer/export/: __init__.py
src/xps_analyzer/preprocessing/: __init__.py
src/xps_analyzer/utils/: __init__.py
src/xps_analyzer/visualization/: __init__.py
