[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xps-analyzer"
version = "0.1.0"
authors = [
    {name = "Jesus Flores Lacarra", email = "jss.263.fsc@gmail.com"}
]
description = "Software automatizado para analisis de datos XPS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["XPS", "spectroscopy", "data-analysis", "materials-science"]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "lmfit>=1.0.0",
    "h5py>=3.0.0",
    "PyYAML>=6.0",
    "click>=8.0.0",
    "tqdm>=4.60.0",
]

[dependency-groups]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "ruff>=0.1.0",
    "pre-commit>=2.15.0",
    "mypy>=0.910",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.15.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
]

[project.urls]
Homepage = "https://github.com/JesusF10/xps-data-analysis"
Repository = "https://github.com/JesusF10/xps-data-analysis"
Documentation = "https://xps-data-analysis.readthedocs.io/"
"Bug Reports" = "https://github.com/JesusF10/xps-data-analysis/issues"

[project.scripts]
xps-analyzer = "xps_analyzer.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Configuración de Ruff
[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4
select = [
    "E", # errors
    "W", # warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N", # pep8-naming
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["xps_analyzer"]
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true